# game_reviews

./: .gitignore  Cargo.toml  README.md  game_reviews.sqbpro  game_reviews.sqlite3
src/: igdb.rs  main.rs
templates/: reviews.html  styles.css
