[package]
name = "game_reviews"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
askama = "0.12.0"
async-trait = "0.1.68"
env_logger = "0.10.0"
futures = "0.3.27"
governor = "0.5.1"
hyper = { version = "0.14.25", features = ["full"] }
hyper-tls = "0.5.0"
log = "0.4.17"
minify-html = "0.10.8"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-rustls"] }
time = { version = "0.3.20", features = ["serde", "macros", "formatting"] }
tokio = { version = "1.26.0", features = ["full"] }

[[bin]]
name = "generate"
path = "src/bin/generate.rs"
